--- a/styling.css
+++ b/styling.css
@@ -3,7 +3,7 @@ body {
     color: white;
     font-family: Calibri, "Trebuchet MS", sans-serif;
     font-size: 1rem;
-    margin: 0px;
+    margin: 0;
 }
 .banner {
     display: flex;
@@ -34,6 +34,9 @@ h2 {
     text-align: center;
     margin-top: 3rem;
     font-size: 1.5em;
+}
+footer h2 {
+    padding-bottom: 3rem;
 }
 .contentRow {
     display: flex;
