--- a/styling.css
+++ b/styling.css
@@ -51,3 +51,11 @@ footer h2 {
 .flex-text {
     margin-top: -1rem;
 }
+.comments {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.comments p {
+    margin-top: 3rem;
+}
